# Mara3

./: .gitignore  .prettierignore  .prettierrc.json  ARCHITECTURE.md  CHANGELOG.md  CLIENT-SECURITY-INFO.md  LICENSE  PARITY.md  PROTOCOL.md  README.md  ROADMAP.md  SECURITY-TODO.md  TODO.md  build.bat  desktop.bat  dev.bat  install.bat  package-all.bat  package.bat  package.json  pnpm-lock.yaml  server.bat  start.bat  test.bat  turbo.json  web.bat
.github/workflows/: ci.yml
.husky/: pre-commit
apps/client/: README.md
apps/client-legacy/: README.md  Run-Mara3-Legacy.bat  Run-Mara3.bat  package.json
apps/client-legacy/bootstrap/: index.html
apps/client-legacy/src-tauri/: Cargo.toml  build.rs  rust-toolchain.toml  tauri.conf.json
apps/client-legacy/src-tauri/.cargo/: config.toml
apps/client-legacy/src-tauri/icons/: icon.icns
apps/client-legacy/src-tauri/src/: main.rs  win7_compat.rs
apps/server/: MOTD.md  mara.config  package.json  tsconfig.json  vitest.config.ts
apps/server/emoji/: .gitkeep
apps/server/src/: config.test.ts  config.ts  connection.ts  emoji.e2e.test.ts  emoji.ts  harness.ts  history.test.ts  history.ts  hub.ts  identity.ts  index.ts  logger.ts  main.ts  replies.e2e.test.ts  server.test.ts  server.ts  spike.echo.test.ts  state.ts  tokens.ts  uploads.test.ts  uploads.ts  userEmoji.test.ts  userEmoji.ts  version.test.ts  version.ts
apps/shell/: README.md  package.json
apps/shell/.tauri/: mara-update.key.pub
apps/shell/bootstrap/: index.html
apps/shell/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/shell/src-tauri/capabilities/: default.json
apps/shell/src-tauri/icons/: icon.icns
apps/shell/src-tauri/src/: lib.rs  main.rs
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.svelte  ChatApp.svelte  EmojiDialog.svelte  FormattingHelp.svelte  IdentityControls.svelte  MacrosDialog.svelte  OptionsDialog.svelte  UpdateBanner.svelte  app.css  main.ts  vite-env.d.ts
apps/web/src/lib/: commands.test.ts  commands.ts  connectionNotice.test.ts  connectionNotice.ts  mentions.test.ts  mentions.ts  native.test.ts  native.ts  pmHistory.test.ts  pmHistory.ts  popout.test.ts  popout.ts  settings.test.ts  settings.ts  update.test.ts  update.ts  upload.ts  version.ts
resources/: Mara3Logo.af
scripts/: bump-version.mjs  copy-client.mjs  generate-icons.mjs  package-legacy.mjs  package-linux.mjs  package.mjs  release-github.mjs  zip-dist.mjs
updates/: latest-linux-x64.json  latest-windows-x64.json  latest-windows7-x64.json
