[package]
name = "mara-client-legacy"
version = "3.0.12"
description = "Mara 3 — legacy desktop client (Windows 7, Tauri 1)"
authors = ["Darineth"]
edition = "2021"
# Tauri 1 + an older toolchain is what keeps Windows 7 in reach; see README.md.
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
# shell-open backs the allowlist's shell.open (tauri.conf.json) — used to open the
# update-download URL in the system browser from the picker's "update available" nudge.
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# kuchikiki (pulled in via wry/tauri) uses IndexMap<K, V>, relying on indexmap 1.x's
# std-gated RandomState default. Under build-std (Win7 target) indexmap's `std`
# feature isn't otherwise enabled, dropping that default and failing to compile — so
# force it on here; feature unification then restores it for kuchikiki.
indexmap = { version = "1", features = ["std"] }

[features]
# Tauri 1 release builds enable this (the CLI passes --features custom-protocol).
custom-protocol = ["tauri/custom-protocol"]
